# causal-interface-gym

./: .bandit  .dockerignore  .editorconfig  .env.example  .env.production  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierrc  .safety-policy.yml  .trivyignore  AUTONOMOUS_BACKLOG.md  AUTONOMOUS_IMPLEMENTATION_SUMMARY.md  AUTONOMOUS_RESEARCH_VALIDATION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.frontend  Dockerfile.production  GENERATION_4_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_DEPLOYMENT_REPORT.md  PROJECT_CHARTER.md  QUALITY_GATES.md  README.md  RESEARCH_PUBLICATION_PACKAGE.md  RESEARCH_PUBLICATION_READY.md  SECURITY.md  SETUP_REQUIRED.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION_REPORT.md  UPGRADE_GUIDE.md  VALIDATION_REPORT.md  demo_interface.html  docker-compose.dev.yml  (+19 more)
.devcontainer/: devcontainer.json  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  project-metrics.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  research_discussion.yml
.github/workflows/: ci-cd.yml  production-deploy.yml
.terragon/: README.md  autonomous_executor.py  backlog.json  backlog_manager.py  config.yaml  discovery_engine.py  enhanced-autonomous-system.py  execution-history.json  governance-framework.md  innovation-integration.md  modernization-roadmap.md  performance-optimization.md  run_autonomous.sh  scoring_engine.py  value-metrics.json
docs/: ARCHITECTURE.md  AUTONOMOUS_IMPLEMENTATION_COMPLETE.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  ROADMAP.md
docs/adr/: 0001-react-frontend.md  0002-python-networkx-backend.md  0003-pydantic-validation.md  README.md
docs/compliance/: GOVERNANCE_FRAMEWORK.md
docs/deployment/: DEPLOYMENT_GUIDE.md
docs/monitoring/: ADVANCED_OBSERVABILITY.md  OBSERVABILITY_SETUP.md  PERFORMANCE_MONITORING.md
docs/performance/: OPTIMIZATION_GUIDE.md
docs/runbooks/: INCIDENT_RESPONSE.md  OPERATIONAL_PROCEDURES.md
docs/security/: ADVANCED_SECURITY_CONFIG.md  SECURITY_SCANNING.md
docs/testing/: PERFORMANCE_TESTING_GUIDE.md  TESTING_STRATEGY.md
docs/workflows/: ADVANCED_CI_CD_OPTIMIZATION.md  COMPREHENSIVE_CI_CD_SETUP.md  GITHUB_ACTIONS_SETUP.md  README.md  RELEASE_AUTOMATION.md  SETUP_INSTRUCTIONS.md  ci-cd-setup.md
docs/workflows/examples/: cd.yml  ci.yml  dependency-update.yml  security-scan.yml
examples/: autonomous_demo.py  autonomous_demo_gen2.py  autonomous_demo_gen2_simple.py  autonomous_demo_gen3.py  basic_usage.py  complete_demo.py  generation2_demo.py  generation2_simple.py  generation3_demo.py  generation3_simple.py
k8s/: deployment.yaml  frontend-deployment.yaml  production-deployment.yaml  production-hpa.yaml  production-namespace.yaml  production-service.yaml  quantum-deployment.yaml
monitoring/: alert.rules.yml  otel-config.yaml  prometheus.yml
nginx/: nginx.conf  production.conf
reports/: health_report_20250802_030530.md
scripts/: automated_release.py  collect_metrics.py  deploy-production.sh  deploy.sh  generate_report.py  init-db.sql  production_deployment.py  quality_gates_runner.py  security-scan.sh  update_version.py  validate_causal_accuracy.py
src/: App.tsx  index.css  main.tsx  theme.ts
src/api/: client.ts
src/causal_interface_gym/: __init__.py  advanced_federated_learning.py  advanced_monitoring.py  async_support.py  caching.py  causal_foundation_models.py  config.py  core.py  distributed_computing.py  enterprise_security.py  gpu_accelerated_computing.py  health.py  logging_config.py  metrics.py  monitoring.py  multimodal_causal_ai.py  optimization.py  performance.py  quantum_acceleration.py  quantum_causal_computing.py  quantum_optimization.py  security.py
src/causal_interface_gym/algorithms/: __init__.py  events.py  pipeline.py  rules.py  scoring.py  workers.py
src/causal_interface_gym/autonomous/: __init__.py  ai_code_review.py  causal_discovery_ai.py  experiment_evolution.py  federated_causal_learning.py  meta_learner.py  model_orchestrator.py  research_paper_generator.py
src/causal_interface_gym/config/: production.py
src/causal_interface_gym/database/: __init__.py  cache.py  connection.py  models.py  repositories.py
src/causal_interface_gym/health/: checks.py
src/causal_interface_gym/integrations/: __init__.py
src/causal_interface_gym/integrations/auth/: oauth.py
src/causal_interface_gym/integrations/github/: client.py
src/causal_interface_gym/integrations/notifications/: email.py
src/causal_interface_gym/llm/: __init__.py  belief_extraction.py  client.py  prompts.py  providers.py  response_parser.py
src/causal_interface_gym/monitoring/: __init__.py  health.py  metrics.py
src/causal_interface_gym/optimization/: __init__.py  performance.py  quantum_performance.py  scaling.py
src/causal_interface_gym/research/: __init__.py  benchmarking.py  comprehensive_llm_benchmark.py  discovery.py  interventions.py  novel_algorithms.py  publication_benchmark.py
src/causal_interface_gym/security/: production.py
src/causal_interface_gym/testing/: __init__.py  quality_gates.py
src/components/: CausalGraph.tsx  ErrorBoundary.tsx  InterventionPanel.tsx  LoadingSpinner.tsx  Navbar.tsx  OptimizedTable.tsx  VirtualizedGraph.tsx
src/hooks/: useBenchmark.ts  useExperiment.ts
src/pages/: BenchmarkPage.tsx  DocsPage.tsx  ExperimentPage.tsx  HomePage.tsx
src/store/: index.ts
src/tests/: setup.ts
src/tests/components/: CausalGraph.test.tsx
src/tests/hooks/: useExperiment.test.ts
src/tests/utils/: validation.test.ts
src/types/: index.ts
src/utils/: performance.ts  security.ts  validation.ts
tests/: __init__.py  conftest.py  test_causal_reasoning.py  test_core.py  test_database.py  test_quantum_optimization.py
tests/benchmarks/: __init__.py  test_performance.py
tests/fixtures/: __init__.py  causal_scenarios.py
tests/integration/: __init__.py  test_end_to_end.py
tests/performance/: __init__.py  conftest.py  test_core_performance.py
